fix auditions question boxes, stop button moving when hover

--- a/auditions.html
+++ b/auditions.html
@@ -96,7 +96,7 @@
 =            FAQ            =
 ==========================-->
 
-<section class="section">
+<section class="section faq">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
