audition explain update/form setup

--- a/auditions.html
+++ b/auditions.html
@@ -166,6 +166,7 @@
 									  <div class="card-body">
 											You'll walk over to the Audition Room to meet our music directors and we'll help you warm up. 
 											Then we'll walk you through some exercises to test your range, tonal memory, ability to keep rhythm, and familiarity sight singing.
+											Finally, you perform a solo song of your choice for 30-60 seconds!
 									  </div>
 									</div>
 								</div>
@@ -259,7 +260,7 @@
 									  <div class="card-body">
 											The Beat @ UCSD loves your enthusiasm and questions!
 											<br><br>
-											For general information about joining any acapella group on campus, be sure to <a href="www.facebook.com/THEGROUP"><u>join the UCSD A Cappella Auditionees 2019 Facebook Group.</u></a>
+											For general information about joining any acapella group on campus, be sure to <a href="https://www.facebook.com/groups/2019acappellaauditionees/"><u>join the UCSD A Cappella Auditionees 2019 Facebook Group.</u></a>
 											<br><br>
 											For specific information, please <a href=contact.html><u>contact us!</u></a>
 										</div>
