--- a/contact.html
+++ b/contact.html
@@ -91,19 +91,6 @@
 
 <!--====  End of Page Title  ====-->
 
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-USE https://formspree.io
-
 
 <section class="section contact-form">
 	<div class="container">
@@ -115,7 +102,7 @@ USE https://formspree.io
 				</div>
 			</div>
 		</div>
-		<form action="#" class="row">
+		<form method="POST" action="https://formspree.io/ucsd.beat@gmail.com" class="row">
 			<div class="col-md-6">
 				<input type="text" class="form-control main" name="name" id="name" placeholder="Name">
 			</div>
@@ -129,8 +116,10 @@ USE https://formspree.io
 				<textarea name="message" id="message" class="form-control main" rows="10" placeholder="Your Message"></textarea>
 			</div>
 			<div class="col-12 text-center">
-				<button type="submit" class="btn btn-main-md">Send Message</button>
-			</div>
+        <button type="submit" class="btn btn-main-md">Send Message</button>
+        <p>You can also email us at <a href=mailto:hello@ucsdbeat.com> hello@ucsdbeat.com!</a></p>
+      </div>
+      
 		</form>
 	</div>
 </section>
