--- a/auditions.html
+++ b/auditions.html
@@ -118,10 +118,11 @@
 								<!-- Collapse -->
 								<div class="card">
 									<!-- Collapse Header -->
-									<div class="card-header" id="headingOne">
+									<div class="card-header audition-faq" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseOne">
-										  <span class="fa fa-plus-circle"></span>How do I prepare for the audition?
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="faq-text">How do I prepare for the audition?</span>
 										</a>
 									  </h5>
 									</div>
@@ -136,10 +137,11 @@
 								<!-- Collapse -->
 								<div class="card">
 									<!-- Collapse Header -->
-									<div class="card-header" id="headingOne">
+									<div class="card-header audition-faq" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseTwo">
-										  <span class="fa fa-plus-circle"></span>What do I do when I get to the audition?
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="faq-text">What do I do when I get to the audition?</span>
 										</a>
 									  </h5>
 									</div>
