--- a/performances.html
+++ b/performances.html
@@ -73,7 +73,7 @@
 =            Page Title            =
 =================================-->
 
-<section class="page-title bg-title overlay-dark">
+<section class="page-title bg-perf-title overlay-dark">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 text-center">
