--- a/about-us.html
+++ b/about-us.html
@@ -413,6 +413,7 @@ Their unmistakable friendship shines through in each performance, making for an 
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
   <!-- Members Data -->
   <script src="js/vue/members.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
