--- a/auditions.html
+++ b/auditions.html
@@ -416,6 +416,7 @@
   <script type="text/javascript" src="plugins/google-map/gmap.js"></script>
   <!-- Custom Script -->
   <script src="js/custom.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
