--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Bootstrap -->
   <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Themefisher Font -->  
-  <link href="plugins/themefisher-font/style.css" rel="stylesheet">
+  <!-- <link href="plugins/themefisher-font/style.css" rel="stylesheet"> -->
   <!-- Font Awesome -->
   <link href="plugins/font-awsome/css/font-awesome.min.css" rel="stylesheet">
   <!-- Magnific Popup -->
@@ -403,7 +403,8 @@
   <!-- Custom Script -->
   <script src="js/vue/home.js"></script>
   <!-- Performances Data -->
-  <script src="js/vue/performances.js"></script>
+  <!-- <script src="js/vue/performances.js"></script> -->
+  <script src="js/main.js"></script>
 </body>
 
 </html>
