--- a/performances.html
+++ b/performances.html
@@ -540,6 +540,7 @@
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
   <!-- Custom Script -->
   <script src="js/custom.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
