--- a/auditions.html
+++ b/auditions.html
@@ -141,7 +141,7 @@
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseTwo">
 										  <span class="fa fa-plus-circle"></span>
-										  <span class="faq-text">What do I do when I get to the audition?</span>
+										  <span class="faq-text">What do I do when I get to auditions?</span>
 										</a>
 									  </h5>
 									</div>
