--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link nav-link-white" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-			<a class="nav-link" href="about-us.html">About</a>
+			<a class="nav-link nav-link-white" href="about-us.html">About</a>
 		</li>
         <li class="nav-item">
-			<a class="nav-link" href="performances.html">Performances</a>
+			<a class="nav-link nav-link-white" href="performances.html">Performances</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="auditions.html">Auditions</a>
+			<a class="nav-link nav-link-white" href="auditions.html">Auditions</a>
 		</li>
         <li class="nav-item">
-			<a class="nav-link" href="contact.html">Contact</a>
+			<a class="nav-link nav-link-white" href="contact.html">Contact</a>
 		</li>
       </div>
   </div>
