--- a/index.html
+++ b/index.html
@@ -78,14 +78,13 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<!-- Content Block -->
-				<div class="block">
+				<div class="block text-center">
 					<!-- Coundown Timer -->
-					<div class="timer"></div>
 					<h1>The Beat</h1>
 					<h2>UCSD Co-Ed Acapella</h2>
-					<h6>02-05 July 2017 California</h6>
+					<br>
 					<!-- Action Button -->
-					<a href="contact.html" class="btn btn-white-md">hire us!</a>
+					<a href="contact.html" class="btn btn-hire-md">hire us!</a>
 				</div>
 			</div>
 		</div>
