--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Eventre</title>
+  <title>The Beat - About Us</title>
   
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
@@ -49,8 +49,13 @@
 		  <li class="nav-item">
 			<a class="nav-link nav-link-white" href="index.html">Home</a>
 		  </li>
-		  <li class="nav-item active">
-			  <a class="nav-link nav-link-white" href="about-us.html">About</a>
+		  <li class="nav-item dropdown dropdown-slide active">
+			<a class="nav-link nav-link-white" href="#" data-toggle="dropdown">About</a>
+			  <!-- Dropdown list -->
+			  <div class="dropdown-menu">
+				<a class="dropdown-item" href="about-us.html">The Group</a>
+				<a class="dropdown-item" href="#members">Members</a>
+			  </div>
 		  </li>
 		  <li class="nav-item">
 			  <a class="nav-link nav-link-white" href="performances.html">Performances</a>
@@ -137,7 +142,7 @@ Their unmistakable friendship shines through in each performance, making for an 
 =            Speakers            =
 ===============================-->
 
-<section class="section speakers bg-speaker overlay-lighter">
+<section class="section speakers bg-speaker overlay-lighter" id="members">
 	<div class="container" id="app">
 		<div class="row">
 			<div class="col-12">
