--- a/auditions.html
+++ b/auditions.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Eventre</title>
+  <title>The Beat - Auditions</title>
   
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
@@ -49,8 +49,13 @@
 		  <li class="nav-item">
 			<a class="nav-link nav-link-white" href="index.html">Home</a>
 		  </li>
-		  <li class="nav-item">
-			  <a class="nav-link nav-link-white" href="about-us.html">About</a>
+		  <li class="nav-item dropdown dropdown-slide">
+			<a class="nav-link nav-link-white" href="#" data-toggle="dropdown">About</a>
+			  <!-- Dropdown list -->
+			  <div class="dropdown-menu">
+				<a class="dropdown-item" href="about-us.html">The Group</a>
+				<a class="dropdown-item" href="about-us.html#members">Members</a>
+			  </div>
 		  </li>
 		  <li class="nav-item">
 			  <a class="nav-link nav-link-white" href="performances.html">Performances</a>
