--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Beat</title>
+  <title>The Beat - Home</title>
   
   <!-- PLUGINS CSS STYLE -->
   <!-- Bootstrap -->
@@ -48,10 +48,15 @@
       <ul class="navbar-nav mx-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-white" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-			<a class="nav-link nav-link-white" href="about-us.html">About</a>
 		</li>
+		<li class="nav-item dropdown dropdown-slide">
+			<a class="nav-link nav-link-white" href="#" data-toggle="dropdown">About</a>
+			  <!-- Dropdown list -->
+			  <div class="dropdown-menu">
+				<a class="dropdown-item" href="about-us.html">The Group</a>
+				<a class="dropdown-item" href="about-us.html#members">Members</a>
+			  </div>
+		  </li>
         <li class="nav-item">
 			<a class="nav-link nav-link-white" href="performances.html">Performances</a>
 		</li>
