--- a/about-us.html
+++ b/about-us.html
@@ -152,6 +152,8 @@ Their unmistakable friendship shines through in each performance, making for an 
 				v-bind:first="member.firstName"
 				v-bind:last="member.lastName"
 				v-bind:part="member.partPos"
+				v-bind:major="member.major"
+				v-bind:year="member.year"
 				v-bind:picture="member.image"
 				v-bind:link="member.link"
 				v-bind:socla1="member.socials[0].class"
