--- a/about-us.html
+++ b/about-us.html
@@ -149,6 +149,7 @@ Their unmistakable friendship shines through in each performance, making for an 
 				<!-- Section Title -->
 				<div class="section-title white">
 					<h3>Meet <span class="alternate">The Beat</span></h3>
+					<p>SOMETHING CUTE I DONT KNOW YET</p>
 				</div>
 			</div>
 		</div>
