--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
       <a class="navbar-brand" href="index.html">
         <img src="images/logo.png" alt="logo"> 
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="fa fa-bars"></span>
+      <button class="navbar-toggler hamburger hamburger--emphatic" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="hamburger-box">
+			<span class="hamburger-inner"></span>
+		  </span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
