--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <link href="plugins/slick/slick-theme.css" rel="stylesheet">
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
+  <!--HAMBURGER MENU-->
+  <link href="css/hamburgers.css" rel="stylesheet">
 
   <!-- FAVICON -->
   <link href="images/favicon.png" rel="shortcut icon">
