updates/domain compatibility

--- a/about-us.html
+++ b/about-us.html
@@ -84,11 +84,11 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="title">
-					<h3>About The Beat</h3>
+					<h3>About</h3>
 				</div>
 				<ol class="breadcrumb p-0 m-0">
 				  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-				  <li class="breadcrumb-item active">About The Beat</li>
+				  <li class="breadcrumb-item active">About</li>
 				</ol>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 			</div>
 			<div class="col-lg-8 col-md-6 align-self-center">
 				<div class="content-block">
-					<h2>What's <span class="alternate">The Beat?</span></h2>
+					<h2>About <span class="alternate">The Beat</span></h2>
 					<div class="description-one">
 						<p>Hailing from sunny La Jolla, CA, The Beat distinguishes itself by its values in working hard, playing hard, and - most importantly - loving each other to the max. This group of singers with diverse interests and backgrounds was brought together in 2004 by their passion for music - a passion that blossomed into an immense love and respect for one another.<br><br>
 							From jazz to country to rock and pop, The Beat always delivers its own personal soul and style. The group has covered artists such as Sara Bareilles, Queen, Ed Sheeran, Beyonce, TLC, Justin Timberlake, Florence + the Machine, Nicki Minaj, and much more! In Fall of 2011, The Beat released their third CD entitled “Boom Baby!”
@@ -353,24 +353,15 @@ Their unmistakable friendship shines through in each performance, making for an 
       <div class="row">
         <div class="col-md-12">
           <div class="block text-center">
-            <div class="footer-logo">
-              <img src="images/footer-logo.png" alt="logo" class="img-fluid">
-            </div>
             <ul class="social-links-footer list-inline">
               <li class="list-inline-item">
                 <a href="#"><i class="fa fa-facebook"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li class="list-inline-item">
                 <a href="#"><i class="fa fa-instagram"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-rss"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-vimeo"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
               </li>
             </ul>
           </div>
@@ -385,7 +376,7 @@ Their unmistakable friendship shines through in each performance, making for an 
     <div class="row">
       <div class="col-md-6 align-self-center">
         <div class="copyright-text">
-          <p><a href="#">Eventre</a> &#169; 2017 All Right Reserved</p>
+          <p><a href="#">The Beat</a> &#169; 2019 All Right Reserved</p>
         </div>
       </div>
       <div class="col-md-6">
@@ -394,6 +385,7 @@ Their unmistakable friendship shines through in each performance, making for an 
     </div>
   </div>
 </footer>
+
 
 
 
