--- a/index.html
+++ b/index.html
@@ -247,98 +247,6 @@
 
 <!--====  End of News Posts  ====-->
 
-<!--==============================
-=            Sponsors            =
-===============================-->
-
-<section class="sponsors section bg-sponsors overlay-white">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<div class="section-title">
-					<h3>Our <span class="alternate">Sponsors</span></h3>
-					<p>From our family to yours, thank you!</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				<div class="block text-center">
-					<!-- Sponsors image list -->
-					<ul class="list-inline sponsors-list">
-						<li class="list-inline-item">
-							<div class="image-block text-center">
-								<a href="#">
-									<img src="images/sponsors/pt-spon-two.png" alt="sponsors-logo" class="img-fluid">
-								</a>
-							</div>
-						</li>
-						<li class="list-inline-item">
-							<div class="image-block text-center">
-								<a href="#">
-									<img src="images/sponsors/pt-spon-two.png" alt="sponsors-logo" class="img-fluid">
-								</a>
-							</div>
-						</li>
-						<li class="list-inline-item">
-							<div class="image-block text-center">
-								<a href="#">
-									<img src="images/sponsors/pt-spon-three.png" alt="sponsors-logo" class="img-fluid">
-								</a>
-							</div>
-						</li>
-						<li class="list-inline-item">
-							<div class="image-block text-center">
-								<a href="#">
-									<img src="images/sponsors/pt-spon-four.png" alt="sponsors-logo" class="img-fluid">
-								</a>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="sponsor-btn text-center">
-					<a href="#" class="btn btn-main-md">Become a sponsor</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!--====  End of Sponsors  ====-->
-
-<!--==============================================
-=            Call to Action Subscribe            =
-===============================================-->
-
-<section class="cta-subscribe bg-subscribe overlay-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 mr-auto">
-				<!-- Subscribe Content -->
-				<div class="content">
-					<h3>Subscribe to Our <span class="alternate">Newsletter</span></h3>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusm tempor</p>
-				</div>
-			</div>
-			<div class="col-md-6 ml-auto align-self-center">
-				<!-- Subscription form -->
-				<form action="#" class="row">
-					<div class="col-lg-8 col-md-12">
-						<input type="email" class="form-control main white mb-lg-0" placeholder="Email">
-					</div>
-					<div class="col-lg-4 col-md-12">
-						<div class="subscribe-button">
-							<button class="btn btn-main-md">Subscribe</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!--====  End of Call to Action Subscribe  ====-->
-
 <!--============================
 =            Footer            =
 =============================-->
@@ -358,12 +266,6 @@
               <li class="list-inline-item">
                 <a href="#"><i class="fa fa-youtube"></i></a>
               </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-spotify"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-soundcloud"></i></a>
-              </li>
             </ul>
           </div>
           
@@ -377,7 +279,7 @@
     <div class="row">
       <div class="col-md-6 align-self-center">
         <div class="copyright-text">
-          <p><a href="#">Eventre</a> &#169; 2017 All Right Reserved</p>
+          <p><a href="#">The Beat</a> &#169; 2019 All Right Reserved</p>
         </div>
       </div>
       <div class="col-md-6">
