--- a/auditions.html
+++ b/auditions.html
@@ -312,40 +312,6 @@
 
 <!--====  End of FAQ  ====-->
 
-
-<!--==============================================
-=            Call to Action Subscribe            =
-===============================================-->
-
-<section class="cta-subscribe bg-subscribe overlay-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 mr-auto">
-				<!-- Subscribe Content -->
-				<div class="content">
-					<h3>Subscribe to Our <span class="alternate">Newsletter</span></h3>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusm tempor</p>
-				</div>
-			</div>
-			<div class="col-md-6 ml-auto align-self-center">
-				<!-- Subscription form -->
-				<form action="#" class="row">
-					<div class="col-lg-8 col-md-12">
-						<input type="email" class="form-control main white mb-lg-0" placeholder="Email">
-					</div>
-					<div class="col-lg-4 col-md-12">
-						<div class="subscribe-button">
-							<button class="btn btn-main-md">Subscribe</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!--====  End of Call to Action Subscribe  ====-->
-
 <!--============================
 =            Footer            =
 =============================-->
@@ -355,24 +321,15 @@
       <div class="row">
         <div class="col-md-12">
           <div class="block text-center">
-            <div class="footer-logo">
-              <img src="images/footer-logo.png" alt="logo" class="img-fluid">
-            </div>
             <ul class="social-links-footer list-inline">
               <li class="list-inline-item">
                 <a href="#"><i class="fa fa-facebook"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li class="list-inline-item">
                 <a href="#"><i class="fa fa-instagram"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-rss"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-vimeo"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
               </li>
             </ul>
           </div>
@@ -387,7 +344,7 @@
     <div class="row">
       <div class="col-md-6 align-self-center">
         <div class="copyright-text">
-          <p><a href="#">Eventre</a> &#169; 2017 All Right Reserved</p>
+          <p><a href="#">The Beat</a> &#169; 2019 All Right Reserved</p>
         </div>
       </div>
       <div class="col-md-6">
@@ -396,6 +353,7 @@
     </div>
   </div>
 </footer>
+
 
 
 
