--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 =            Page Title            =
 =================================-->
 
-<section class="page-title bg-title overlay-dark">
+<section class="page-title bg-contact-title overlay-dark">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 text-center">
@@ -116,6 +116,9 @@
 			</div>
 			<div class="col-md-12">
 				<input type="text" class="form-control main" name="phone" id="phone" placeholder="Phone">
+      </div>
+      <div class="col-md-12">
+				<input type="text" class="form-control main" name="subject" id="subject" placeholder="Subject">
 			</div>
 			<div class="col-md-12">
 				<textarea name="message" id="message" class="form-control main" rows="10" placeholder="Your Message"></textarea>
@@ -134,51 +137,43 @@
 =============================-->
 
 <footer class="footer-main">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="block text-center">
-            <div class="footer-logo">
-              <img src="images/footer-logo.png" alt="logo" class="img-fluid">
-            </div>
-            <ul class="social-links-footer list-inline">
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-instagram"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-rss"></i></a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#"><i class="fa fa-vimeo"></i></a>
-              </li>
-            </ul>
-          </div>
-          
-        </div>
-      </div>
-    </div>
-</footer>
-<!-- Subfooter -->
-<footer class="subfooter">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 align-self-center">
-        <div class="copyright-text">
-          <p><a href="#">Eventre</a> &#169; 2017 All Right Reserved</p>
+      <div class="col-md-12">
+        <div class="block text-center">
+          <ul class="social-links-footer list-inline">
+            <li class="list-inline-item">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#"><i class="fa fa-youtube"></i></a>
+            </li>
+          </ul>
         </div>
-      </div>
-      <div class="col-md-6">
-          <a href="#" class="to-top"><i class="fa fa-angle-up"></i></a>
+        
       </div>
     </div>
   </div>
 </footer>
+<!-- Subfooter -->
+<footer class="subfooter">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 align-self-center">
+      <div class="copyright-text">
+        <p><a href="#">The Beat</a> &#169; 2019 All Right Reserved</p>
+      </div>
+    </div>
+    <div class="col-md-6">
+        <a href="#" class="to-top"><i class="fa fa-angle-up"></i></a>
+    </div>
+  </div>
+</div>
+</footer>
+
 
 
 
