--- a/about-us.html
+++ b/about-us.html
@@ -355,13 +355,13 @@ Their unmistakable friendship shines through in each performance, making for an 
           <div class="block text-center">
             <ul class="social-links-footer list-inline">
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/theucsdbeat/"><i class="fa fa-facebook"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/theucsdbeat/"><i class="fa fa-instagram"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.youtube.com/user/theucsdbeat"><i class="fa fa-youtube"></i></a>
               </li>
             </ul>
           </div>
