--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
               <a href="#"><i class="fa fa-instagram"></i></a>
             </li>
             <li class="list-inline-item">
-              <a href="#"><i class="fa fa-youtube"></i></a>
+              <a href="https://www.youtube.com/user/theucsdbeat"><i class="fa fa-youtube"></i></a>
             </li>
           </ul>
         </div>
