--- a/performances.html
+++ b/performances.html
@@ -484,13 +484,13 @@
           <div class="block text-center">
             <ul class="social-links-footer list-inline">
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/theucsdbeat/"><i class="fa fa-facebook"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/theucsdbeat/"><i class="fa fa-instagram"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.youtube.com/user/theucsdbeat"><i class="fa fa-youtube"></i></a>
               </li>
             </ul>
           </div>
