--- a/single-speaker.html
+++ b/single-speaker.html
@@ -319,13 +319,13 @@
             </div>
             <ul class="social-links-footer list-inline">
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/theucsdbeat/"><i class="fa fa-facebook"></i></a>
               </li>
               <li class="list-inline-item">
                 <a href="#"><i class="fa fa-twitter"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/theucsdbeat/"><i class="fa fa-instagram"></i></a>
               </li>
               <li class="list-inline-item">
                 <a href="#"><i class="fa fa-rss"></i></a>
