--- a/performances.html
+++ b/performances.html
@@ -107,7 +107,7 @@
 			<div class="row">
 					<div class="col-12">
 						<div class="section-title">
-							<h1>Hear <span class="alternate">The Beat!</span></h1>
+							<h1>Hear <span class="alternate">The Beat</span></h1>
 							<p>Find out about upcoming performances and view our old ones!</p>
 						</div>
 					</div>
