--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 =            Navigation Section            =
 =========================================-->
 
-<nav class="navbar main-nav main-nav-transparent fixed-top navbar-expand-lg p-0">
+<nav class="navbar main-nav main-nav-white main-nav-transparent fixed-top navbar-expand-lg p-0">
   <div class="container-fluid p-0">
       <!-- logo -->
       <a class="navbar-brand" href="index.html">
