--- a/about-us.html
+++ b/about-us.html
@@ -117,20 +117,15 @@
 				<div class="content-block">
 					<h2>About <span class="alternate">The Beat</span></h2>
 					<div class="description-one">
-						<p>Hailing from sunny La Jolla, CA, The Beat distinguishes itself by its values in working hard, playing hard, and - most importantly - loving each other to the max. This group of singers with diverse interests and backgrounds was brought together in 2004 by their passion for music - a passion that blossomed into an immense love and respect for one another.<br><br>
-							From jazz to country to rock and pop, The Beat always delivers its own personal soul and style. The group has covered artists such as Sara Bareilles, Queen, Ed Sheeran, Beyonce, TLC, Justin Timberlake, Florence + the Machine, Nicki Minaj, and much more! In Fall of 2011, The Beat released their third CD entitled “Boom Baby!”
-
-​
-
-Now in its fifteenth year, The Beat has had the privilege to perform everywhere, including weddings, museums, senior citizen nursing homes, various campus events, and at the International Championship of Collegiate A Cappella (ICCA), winning first place at their quarterfinal in 2014 (then advancing to the West Semifinals), and third in 2015, along with various awards for choreography and arrangements. The group also hosts two main shows during the academic year: a joint concert in the fall that features other San Diegan a cappella groups and a themed concert/musical extravaganza in the spring! Past spring shows have been: “The ZomBeat Acapocalypse”, “Spongebob Squarebeat”, “Beat to the Future”, “Harry Potter and the Beat of the Yule Ball” and more!
-<br><br>
-​
-
-Their unmistakable friendship shines through in each performance, making for an enchanting and moving experience. This is not just another talented group of singers, but a family.
+						<p>
+								Based in La Jolla, The Beat at UCSD works hard to play hard. As one of many a co-ed a cappella group, our group prides itself on our close-knit ties to each other and our a cappella community. This group of talented and diverse singers was originally brought together in 2004, driven by their passion for music. Since then, that passion has bloomed into an immense love and respect for music, a cappella, and each other. 
+								<br><br>
+								With songs ranging from jazz, to R&B, and pop, The Beat always delivers a soulful and personal style to each arrangement and performance. Our group has covered artists such as Ariana Grande, Michael Buble, Jon Bellion, Tori Kelly, Panic! At the Disco, and many more! Now in our 15th year, The Beat has had the privilege to perform at numerous events — including weddings, museums, San Diego community events, various campus events, and the International Championship of Collegiate A Cappella (ICCA). Our group placed first place in our quarterfinal in 2014 (advancing us to the West Semifinals), and placing third in 2015, along with several awards for best choreography and best arrangements. 
+								The Beat also hosts a concert every quarter to showcase new music we have been working on throughout each Fall, Winter, and Spring quarter. Our last concert in the Spring acts as a showcase of all the music we’ve prepared over the course of each year! 
+								<br><br>
+								We work hard to produce a sound and blend in our songs that is unmatched. We push each other grow as musicians and performers, which only makes us stronger as a whole. The Beat family may ebb and flow with graduating classes, but our love for the group and the music will always stay. 
+								
 						</p>
-					</div>
-					<div class="description-two">
-						<p>Do you like waffles? Yeah I like waffles! Do you like pancakes? Yeah I love pancakes!</p>
 					</div>
 
 				</div>
