navbar across site

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 =            Navigation Section            =
 =========================================-->
 
-<nav class="navbar main-nav main-nav-transparent fixed-top navbar-expand-lg p-0">
+<nav class="navbar main-nav main-nav-white main-nav-transparent fixed-top navbar-expand-lg p-0">
   <div class="container-fluid p-0">
       <!-- logo -->
       <a class="navbar-brand" href="index.html">
@@ -50,7 +50,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link nav-link-white" href="index.html">Home</a>
 		</li>
 		<li class="nav-item dropdown dropdown-slide">
@@ -67,7 +67,7 @@
 		<li class="nav-item">
 			<a class="nav-link nav-link-white" href="auditions.html">Auditions</a>
 		</li>
-        <li class="nav-item">
+        <li class="nav-item active">
 			<a class="nav-link nav-link-white" href="contact.html">Contact</a>
 		</li>
       </div>
