--- a/about-us.html
+++ b/about-us.html
@@ -36,7 +36,7 @@
 =            Navigation Section            =
 =========================================-->
 
-<nav class="navbar main-nav main-nav-transparent fixed-top navbar-expand-lg p-0">
+<nav class="navbar main-nav main-nav-white main-nav-transparent fixed-top navbar-expand-lg p-0">
 	<div class="container-fluid p-0">
 		<!-- logo -->
 		<a class="navbar-brand" href="index.html">
@@ -49,10 +49,10 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav mx-auto">
-		  <li class="nav-item active">
+		  <li class="nav-item">
 			<a class="nav-link nav-link-white" href="index.html">Home</a>
 		  </li>
-		  <li class="nav-item dropdown dropdown-slide">
+		  <li class="nav-item dropdown dropdown-slide active">
 			  <a class="nav-link nav-link-white" href="#" data-toggle="dropdown">About</a>
 				<!-- Dropdown list -->
 				<div class="dropdown-menu">
@@ -72,9 +72,8 @@
 		</div>
 	</div>
   </nav>
-	
-
-<!--====  End of Navigation Section  ====-->
+  
+  <!--====  End of Navigation Section  ====-->
 
 
 
