--- a/performances.html
+++ b/performances.html
@@ -36,7 +36,7 @@
 =            Navigation Section            =
 =========================================-->
 
-<nav class="navbar main-nav main-nav-transparent fixed-top navbar-expand-lg p-0">
+<nav class="navbar main-nav main-nav-white main-nav-transparent fixed-top navbar-expand-lg p-0">
 	<div class="container-fluid p-0">
 		<!-- logo -->
 		<a class="navbar-brand" href="index.html">
@@ -49,7 +49,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav mx-auto">
-		  <li class="nav-item active">
+		  <li class="nav-item">
 			<a class="nav-link nav-link-white" href="index.html">Home</a>
 		  </li>
 		  <li class="nav-item dropdown dropdown-slide">
@@ -60,7 +60,7 @@
 				  <a class="dropdown-item" href="about-us.html#members">Members</a>
 				</div>
 			</li>
-		  <li class="nav-item">
+		  <li class="nav-item active">
 			  <a class="nav-link nav-link-white" href="performances.html">Performances</a>
 		  </li>
 		  <li class="nav-item">
@@ -72,8 +72,8 @@
 		</div>
 	</div>
   </nav>
-
-<!--====  End of Navigation Section  ====-->
+  
+  <!--====  End of Navigation Section  ====-->
 
 
 
