started performance component/updated about page

--- a/about-us.html
+++ b/about-us.html
@@ -146,7 +146,7 @@
 				<!-- Section Title -->
 				<div class="section-title white">
 					<h3>Meet <span class="alternate">The Beat</span></h3>
-					<p>SOMETHING CUTE I DONT KNOW YET</p>
+					<p>Come meet our family!</p>
 				</div>
 			</div>
 		</div>
