--- a/auditions.html
+++ b/auditions.html
@@ -111,12 +111,20 @@
 			<div class="col-12">
 				<div class="section-title">
 					<h1>Be <span class="alternate">The Beat!</span></h1>
+					<p>We're so excited to hear you want to join our family! Unfortunately, audition season
+						<br> 
+						is only in the fall quarter. Be sure to sign up for next year's auditions at the beginning of fall quarter! 
+					</p>
+					<!--====  Audition Season Only!! 
 					<p>We're so excited to hear you want to join our family! Sign up for an audition using 
 						<br> 
 						<a href="http://www.acaspot.com/audition?g=160">our AcaSpot link (www.acaspot.com/audition) </a> so we can hear your lovely voice and learn more about you!
 					</p>
 					<br>
 					<a href="http://www.acaspot.com/audition?g=160" class="btn btn-outline-md">Sign Up for Auditions!</a>
+
+					====  End of Audition Season Only!! ====-->
+
 				</div>
 			</div>
 		</div>
