--- a/performances.html
+++ b/performances.html
@@ -117,7 +117,7 @@
 				</div>
 
 
-		<div class="row mt-30">
+		<div class="row mt-30" id="app">
 			
 			<div class="col-lg-4 col-md-6 col-sm-8 col-10 m-auto">
 				<div class="blog-post">
@@ -340,8 +340,10 @@
   <!-- SyoTimer -->
   <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
   <!-- Custom Script -->
+  <script src="js/vue/components/performance/app.js"></script>
   <script src="js/custom.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 
 </html>
