--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-6 align-self-center">
 				<div class="image-block bg-about">
-					<img class="img-fluid" src="images/fun/coed.png" alt="">
+					<img class="img-fluid" src="images/fun/coed.jpg" alt="">
 				</div>
 			</div>
 			<div class="col-lg-8 col-md-6 align-self-center">
