--- a/auditions.html
+++ b/auditions.html
@@ -111,9 +111,9 @@
 			<div class="col-12">
 				<div class="section-title">
 					<h1>Be <span class="alternate">The Beat!</span></h1>
-					<p>We're so excited to hear you want to join our family! Unfortunately, audition season
+					<p>We're so excited to hear you want to join our family! Unfortunately, audition season is only
 						<br> 
-						is only in the fall quarter. Be sure to sign up for next year's auditions at the beginning of fall quarter! 
+						in the fall quarter. Be sure to sign up for next year's auditions at the beginning of the next school year! 
 					</p>
 					<!--====  Audition Season Only!! 
 					<p>We're so excited to hear you want to join our family! Sign up for an audition using 
