--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<h2>UCSD Co-Ed Acapella</h2>
 					<br>
 					<!-- Action Button -->
-					<a href="contact.html" class="btn btn-hire-md">hire us!</a>
+					<a href="contact.html" class="btn btn-hire-md">contact us!</a>
 				</div>
 			</div>
 		</div>
