mika + auditions offseason

--- a/auditions.html
+++ b/auditions.html
@@ -112,7 +112,16 @@
 				<div class="section-title">
 					<h1>Be <span class="alternate">The Beat!</span></h1><br>
 
-					<!--====  COVID-WI21 Auditions!! ====-->
+
+					<!-- Off Season ====-->
+					<p>We're so excited to hear you want to join our family! Our next audition season will be begin
+						<br> 
+						Fall 2021. Be sure to sign up for next year's auditions at the beginning of the next school year! 
+					</p>
+					<!----====  End of Off Season ====-->
+
+
+					<!--====  COVID-WI21 Auditions!! 
 					<p>Hello auditionees! We're so excited to hear that you want to join our family.<br>Please sign up for an audition using so we can hear your lovely voice and learn more about you!<br><br>
 
 						We are currently holding virutal auditions for the quarter of Winter 2021! Auditions will be held from January 7th to January 14th.
@@ -128,14 +137,9 @@
 					<br> <a href="https://calendly.com/ucsd-beat/the-beat-auditions-2021" class="btn btn-outline-md">Auditions Sign Up</a><br>
 					<br> <a href="https://forms.gle/hsaDFSAPGSt2VAcD6" class="btn btn-outline-md">Pre-Audition Google Form</a> <br>
 					<br> <a href="https://ucsd.zoom.us/j/98341539253" class="btn btn-outline-md">Zoom Meeting Room</a>
-					<!--====  End of COVID-WI21 Auditions!! ====-->
+					====  End of COVID-WI21 Auditions!! ====-->
 
-					<!-- Off Season
-					<p>We're so excited to hear you want to join our family! Unfortunately, audition season is only
-						<br> 
-						in the fall quarter. Be sure to sign up for next year's auditions at the beginning of the next school year! 
-					</p>
-					====  End of Off Season ====-->
+
 					
 					<!--====  Audition Season Only!! 
 					<p>We're so excited to hear you want to join our family! Sign up for an audition using 
@@ -188,12 +192,10 @@
 									<!-- Collapse Body -->
 									<div id="collapseTwo" class="collapse" data-parent="#accordion">
 									  <div class="card-body">
-										Now that you’ve signed up for your audition, here’s what you can expect when we see you on your audition day! 
-										After joining our <a href="https://ucsd.zoom.us/j/98341539253"><u>Zoom Meeting Room</u></a> <b>(Meeting ID: 983 4153 9253)</b>, one of our members will greet you in our "Lobby" and make sure you’ve filled out the 
-										<a href="https://forms.gle/hsaDFSAPGSt2VAcD6"><u>Pre-Audition Google Form</u></a>. If you can, please fill out the form in advance! After that, feel free to chat with our members and ask any questions you have while waiting for your turn to be transferred to the Audition Room.
+										Arrive and sign in at our friendly Meet-N-Greet Room where you can relax and socialize with our current members! 
+										We'll be calling you in based on your time slots so just hang tight until it's your turn to dazzle us!
 										  <!-- Pre-COVID 
-											Arrive and sign in at our friendly Meet-N-Greet Room where you can relax and socialize with our current members! 
-											We'll be calling you in based on your time slots so just hang tight until it's your turn to dazzle us!
+
 											 End of Pre-COVID -->
 									  </div>
 									</div>
@@ -211,17 +213,10 @@
 									<!-- Collapse Body -->
 									<div id="collapseThree" class="collapse" data-parent="#accordion">
 									  <div class="card-body">
-										The audition will begin with scales for vocal warm-ups. There will be a video in the auditions material folder that we will have you sing along to. 
-										After that, we'll be testing pitch matching where you will sing back the notes you hear in another video in the auditions material folder. Next, we will have a optional (but highly encouraged!) rhythm and sight-reading section. 
-										Finally, we’ll have you sing a 30-60 second solo of your choice. We recommend you pick a song you know well and something that you feel best showcases that voice! <br><br>
-										
-										And with that, your audition will be complete! It is at this time that you can stop your audio recording and upload it to your personalized folder.
+										You'll walk over to the Audition Room to meet our music directors and we'll help you warm up. 
+										Then we'll walk you through some exercises to test your range, tonal memory, ability to keep rhythm, and familiarity sight singing.
+										Finally, you perform a solo song of your choice for 30-60 seconds!
 
-										  <!-- Pre-COVID
-											You'll walk over to the Audition Room to meet our music directors and we'll help you warm up. 
-											Then we'll walk you through some exercises to test your range, tonal memory, ability to keep rhythm, and familiarity sight singing.
-											Finally, you perform a solo song of your choice for 30-60 seconds!
-											End of Pre-COVID -->
 									  </div>
 									</div>
 								</div>
