--- a/auditions.html
+++ b/auditions.html
@@ -113,22 +113,22 @@
 					<h1>Be <span class="alternate">The Beat!</span></h1><br>
 
 
-					<!-- Off Season ====-->
+					<!-- Off Season 
 					<p>We're so excited to hear you want to join our family! Our next audition season will be begin
 						<br> 
 						Fall 2021. Be sure to sign up for next year's auditions at the beginning of the next school year! 
 					</p>
-					<!----====  End of Off Season ====-->
+					End of Off Season ====-->
 
 
-					<!--====  COVID-WI21 Auditions!! 
+					<!--====  COVID-WI21 Auditions!! ====-->
 					<p>Hello auditionees! We're so excited to hear that you want to join our family.<br>Please sign up for an audition using so we can hear your lovely voice and learn more about you!<br><br>
 
-						We are currently holding virutal auditions for the quarter of Winter 2021! Auditions will be held from January 7th to January 14th.
-						If you are interested in auditioning, please start by using the <a href="https://calendly.com/ucsd-beat/the-beat-auditions-2021"><u>Auditions Sign Up</u></a> link below to book a time-slot for your audition! 
+						We are currently holding virutal auditions for the quarter of Fall 2021! Auditions will be held from September 23rd to September 30th.
+						If you are interested in auditioning, please start by using the <a href="https://calendly.com/ucsd-beat/the-beat-auditions-fall-21"><u>Auditions Sign Up</u></a> link below to book a time-slot for your audition! 
 						After signing up for a time slot, please try to fill out your <a href="https://forms.gle/hsaDFSAPGSt2VAcD6"><u>Pre-Audition Google Form </u></a> 
 						before joining our Zoom room for your audition, or try to show up 5 minutes early and someone in the group will help you fill it out before your audition!
-						If the link below for our <a href="https://ucsd.zoom.us/j/98341539253"><u>Zoom Meeting Room</u></a> doesn't work, please try joining <b>Meeting ID: 983 4153 9253</b>.
+						<!-- If the link below for our <a href="https://ucsd.zoom.us/j/98341539253"><u>Zoom Meeting Room</u></a> doesn't work, please try joining <b>Meeting ID: 983 4153 9253</b>. -->
 						<br><i>Please be sure to review all of the questions/sections below before your audition!</i>
 						<br><br>
 						We are so excited to meet and hear from you all! Best of luck at your audition and any other auditions you attend! <br>
@@ -136,8 +136,8 @@
 					</p>
 					<br> <a href="https://calendly.com/ucsd-beat/the-beat-auditions-2021" class="btn btn-outline-md">Auditions Sign Up</a><br>
 					<br> <a href="https://forms.gle/hsaDFSAPGSt2VAcD6" class="btn btn-outline-md">Pre-Audition Google Form</a> <br>
-					<br> <a href="https://ucsd.zoom.us/j/98341539253" class="btn btn-outline-md">Zoom Meeting Room</a>
-					====  End of COVID-WI21 Auditions!! ====-->
+					<!-- <br> <a href="https://ucsd.zoom.us/j/98341539253" class="btn btn-outline-md">Zoom Meeting Room</a>  -->
+					<!----========  End of COVID-WI21 Auditions!! ====-->
 
 
 					
@@ -253,7 +253,7 @@
 									  </div>
 									</div>
 								</div>
-								-->
+								END OF REST OF COLUMN 1-->
 							</div>
 						</div>
 					</div>
@@ -388,7 +388,7 @@
     <div class="row">
       <div class="col-md-6 align-self-center">
         <div class="copyright-text">
-          <p><a href="#">The Beat</a> &#169; 2019 All Right Reserved</p>
+          <p><a href="#">The Beat</a> &#169; 2021 All Right Reserved</p>
         </div>
       </div>
       <div class="col-md-6">
