auditions off season

--- a/auditions.html
+++ b/auditions.html
@@ -113,22 +113,22 @@
 					<h1>Be <span class="alternate">The Beat!</span></h1><br>
 
 
-					<!-- Off Season 
+					<!-- Off Season ====-->
 					<p>We're so excited to hear you want to join our family! Our next audition season will be begin
 						<br> 
-						Fall 2021. Be sure to sign up for next year's auditions at the beginning of the next school year! 
+						Fall 2022. Be sure to sign up for next year's auditions at the beginning of the next school year! 
 					</p>
-					End of Off Season ====-->
+					<!-- End of Off Season ====-->
 
 
-					<!--====  COVID-WI21 Auditions!! ====-->
+					<!--====  COVID-WI21 Auditions!! 
 					<p>Hello auditionees! We're so excited to hear that you want to join our family.<br>Please sign up for an audition using so we can hear your lovely voice and learn more about you!<br><br>
 
 						We are currently holding virutal auditions for the quarter of Fall 2021! Auditions will be held from September 23rd to September 30th.
 						If you are interested in auditioning, please start by using the <a href="https://calendly.com/ucsd-beat/the-beat-auditions-fall-21"><u>Auditions Sign Up</u></a> link below to book a time-slot for your audition! 
 						After signing up for a time slot, please try to fill out your <a href="https://forms.gle/hsaDFSAPGSt2VAcD6"><u>Pre-Audition Google Form </u></a> 
 						before joining our Zoom room for your audition, or try to show up 5 minutes early and someone in the group will help you fill it out before your audition!
-						<!-- If the link below for our <a href="https://ucsd.zoom.us/j/98341539253"><u>Zoom Meeting Room</u></a> doesn't work, please try joining <b>Meeting ID: 983 4153 9253</b>. -->
+						If the link below for our <a href="https://ucsd.zoom.us/j/98341539253"><u>Zoom Meeting Room</u></a> doesn't work, please try joining <b>Meeting ID: 983 4153 9253</b>.
 						<br><i>Please be sure to review all of the questions/sections below before your audition!</i>
 						<br><br>
 						We are so excited to meet and hear from you all! Best of luck at your audition and any other auditions you attend! <br>
@@ -291,7 +291,7 @@
 									<!-- Collapse Body -->
 									<div id="collapseSeven" class="collapse" data-parent="#accordionTwo">
 									  <div class="card-body">
-											Once auditions are complete (after January 14th), you'll receive an email with a callbacks. If you're on the list, congradulations! You've made it to the next round of auditions.
+											Once auditions are complete, you'll receive an email with a callbacks. If you're on the list, congradulations! You've made it to the next round of auditions.
 											Expect another email with all of the the necessary callback information.
 									  </div>
 									</div>
@@ -311,7 +311,7 @@
 									  <div class="card-body">
 											The Beat @ UCSD loves your enthusiasm and questions!
 											<br><br>
-											For general information about joining any acapella group on campus, be sure to <a href="https://fb.me/e/24aJasNQB"><u>join the Triton A Cappella Community: Virtual Winter 2021 Auditions Facebook Group.</u></a>
+											For general information about joining any acapella group on campus, be sure to check out the <a href="https://linktr.ee/tacc.ucsd"><u> Triton A Cappella Community (tAAC).</u></a> Facebook and Instagram pages.
 											<br><br>
 											For specific information, please <a href=contact.html><u>contact us!</u></a>
 										</div>
