re-populated performances

--- a/performances.html
+++ b/performances.html
@@ -350,6 +350,9 @@
 <!-- SyoTimer -->
 <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
 
+<script src="js/main.js"></script>
+
+
 <!-- People Component -->
 <script src="js/vue/components/Performance.js"></script>
 <!-- Members Data -->
