--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body class="body-wrapper">
-<div id="app">
+<div>
 
 <!--========================================
 =            Navigation Section            =
@@ -189,7 +189,7 @@
 =================================-->
 
 <section class="news section">
-	<div class="container">
+	<div class="container" id="app">
 		<div class="row">
 			<div class="col-12">
 				<div class="section-title">
