--- a/auditions.html
+++ b/auditions.html
@@ -311,7 +311,7 @@
 									  <div class="card-body">
 											The Beat @ UCSD loves your enthusiasm and questions!
 											<br><br>
-											For general information about joining any acapella group on campus, be sure to check out the <a href="https://linktr.ee/tacc.ucsd"><u> Triton A Cappella Community (tAAC).</u></a> Facebook and Instagram pages.
+											For general information about joining any acapella group on campus, be sure to check out the <a href="https://linktr.ee/tacc.ucsd"><u> Triton A Cappella Community (tAAC)</u></a> Facebook and Instagram pages.
 											<br><br>
 											For specific information, please <a href=contact.html><u>contact us!</u></a>
 										</div>
